--- a/src/components/Navigation.scss
+++ b/src/components/Navigation.scss
@@ -1,4 +1,5 @@
 .nav-bar{
+    width: 100%;
     background: #3498db;
     color:white;
     height: 70px;
@@ -6,23 +7,104 @@
     justify-content: space-between;
     align-items: center;
     .logo{
+        flex:3;
+        text-align: center;
         display: inline-block;
         margin-left: 2rem;
         a{
+            text-decoration: none;
+            color:#fff;
             font-size: 2rem;
             font-weight: 700;
         }
     }
     .nav-links{
+        flex: 2;
         display: flex;
-        margin-right:10px;
+        margin-right:100px;
         align-items: center;
         list-style: none;
         li{
-            font-size:1.5rem;
-            font-weight: 500;
+            a{
+                text-decoration: none;
+                color:#fff;
+                font-size:1.6rem;
+                font-weight: 500;
+            }
             margin:0 22px;
+        }
+        li:hover{
+            a{
+                color: #f1c40f;
+            }
+        }
+    }
+    .hamburger{
+        display: none;
+        position: relative;
+        top:0;
+        right: 20px;
+        div{
+            display: flex;
+            flex-direction: column;
+            background-color: black;
+            margin: 4px 0 ;
+            width: 25px;
+            height: 4px;
+        }
+    }
+    .x{
+        position: relative;
+        top: 0;
+        right: 20px;
+        div{
+            margin:-1px;
+            background-color: black;
+            width: 25px;
+            height: 4px;
+        }
+        #x1{
+            position: relative;
+            right: 0;
+            top:3.1px;
+            transform: rotate(45deg);
+        }
+        #x2{
+
+            transform: rotate(-45deg);
         }
     }
 }
 
+@media screen and (max-width:780px){
+    .hamburger{
+        display: block!important;
+    }
+    .logo{
+        margin-left:0!important;
+    }
+    .nav-links{
+        transform: translate(-100%);
+        flex: 3;
+        margin:0!important;
+        padding-left:50px ;
+        height: 50px;
+        position: absolute;
+        top:70px;
+        right: 0;
+        width: 100%;
+        z-index: 99;
+        background-color: #fff;
+        overflow-y:auto;
+        justify-content: space-between;
+        li{
+            a{
+                color:#7f8c8d !important;
+            }
+        }
+    }
+    .display-nav{
+        transform: translate(0%);
+        transition: 0.08s ease-in-out;
+    }
+}
